<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/accordionCard"
    style="@style/AccordionCardStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Header -->
        <LinearLayout
            android:id="@+id/headerLayout"
            style="@style/AccordionHeaderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/planeImage"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/logo_image"
                android:src="@drawable/ic_grid"
                app:tint="@color/primary" />

            <TextView
                android:id="@+id/planeName"
                style="@style/AccordionTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/plane_name" />

            <ImageView
                android:id="@+id/ivExpand"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/expand"
                android:src="@drawable/ic_arrow_down"
                app:tint="@color/secondary" />

        </LinearLayout>

        <!-- Content -->
        <LinearLayout
            android:id="@+id/coreNumberContentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/planePresentNumber"
                style="@style/Theme.MyApplicationApp.CardText.Primary.Subheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/present_number" />

            <TextView
                style="@style/Theme.MyApplicationApp.CardText.Primary.Content"
                android:id="@+id/planeDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interpretation"
                />
            <TextView
                style="@style/Theme.MyApplicationApp.CardText.Primary.Content"
                android:id="@+id/traitsHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interpretation"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/loshuRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <TextView
                style="@style/Theme.MyApplicationApp.CardText.Primary.Content"
                android:id="@+id/remediesHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Remedies"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/remediesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>