<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.YourApp.Card.Primary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Header -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/tvKarmicDebtNumber"
                style="@style/Theme.YourApp.CardText.Primary.Header"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_number"
                 />

            <ImageView
                android:id="@+id/ivExpand"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_arrow_down" />

        </LinearLayout>

        <!-- Content -->
        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/tvKarmicDebtSource"
                style="@style/Theme.YourApp.CardText.Primary.Subheader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interpretation" />

            <TextView
                android:id="@+id/tvKarmicDebtInterpretation"
                style="@style/Theme.YourApp.CardText.Primary.Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interpretation" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>