<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="0dp">

    <!-- First Column - Rowspan 2 -->
   <ImageView
        android:id="@+id/numberImage"
        android:contentDescription="@string/logo"
        android:src="@drawable/ic_earth"
        android:minHeight="100dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/numberInterpretation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/numberTitle"
        app:layout_constraintWidth_percent="0.2" />

    <!-- Row 1 - Columns 2 & 3 -->
    <TextView
        android:id="@+id/numberTitle"
        android:layout_width="204dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:text="@string/title_number"
        android:textColor="@color/dark_gold"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/numberWhatSays"
        app:layout_constraintEnd_toStartOf="@+id/numberValue"
        app:layout_constraintStart_toEndOf="@+id/numberImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numberValue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="1111"
        android:gravity="center"
        android:textSize="25dp"
        android:textColor="@color/dark_gold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/numberWhatSays"
        app:layout_constraintStart_toEndOf="@+id/numberTitle"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Row 2 - Single column spanning remaining width -->
    <TextView
        android:id="@+id/numberWhatSays"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/personality_title"
        android:textColor="@color/dark_gold"
        app:layout_constraintTop_toBottomOf="@+id/numberTitle"
        app:layout_constraintBottom_toTopOf="@+id/numberInterpretation"
        app:layout_constraintStart_toEndOf="@+id/numberImage"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Row 3 -->
    <com.shambhu.myapplication.utils.ExpandableTextView
        android:id="@+id/numberInterpretation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/sample_text_long"
        android:textSize="20sp"
        android:layout_margin="4dp"
        app:collapsedMaxLines="2"
        app:showMoreText="Read more"
        app:showLessText="Read less"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/numberImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Row 4 -->
    <View
        android:id="@+id/row4"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:text="Row 4 - Full Width"
        android:background="#FFEAA7"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/numberInterpretation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>