<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="PersonalityFragment"
    android:background="@drawable/mystical_gradient_background"
    tools:context=".fragment.home.PersonalityFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/column1"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:fontFamily="@font/mystical_font"
            android:gravity="end"
            android:padding="8dp"
            android:text="@string/personality_number"
            android:textColor="@color/gold"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.8"
            tools:ignore="MissingConstraints" />

        <!-- Group of 3 views to the right of Col 1 -->
        <TextView
            android:id="@+id/tvPersonalityNumber"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:fontFamily="@font/mystical_font"
            android:padding="8dp"
            android:text="0"
            android:textColor="@color/gold"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/column1"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/karmic_by_date"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/personality_meaning"
            android:src="@drawable/ic_mirrors"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/column1"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mystical_font"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/personality_meaning"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/karmic_by_date" />

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:background="@color/gold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row2"
            tools:ignore="MissingConstraints" />

        <!-- Third Row -->
        <TextView
            android:id="@+id/tvPersonalityInterpretation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mystical_font"
            android:padding="16dp"
            android:text="@string/interpretation"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_line" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
